--- a/fb2/facebook.css
+++ b/fb2/facebook.css
@@ -71,8 +71,7 @@ body{
 .right-section{
     width: 39%;
     float: right;
-   
-    margin-top: -30px;
+    margin-top: -125px;
     
 }
 .main-body{
@@ -111,7 +110,7 @@ body{
     margin-left: 19px;
     font-size: 17px;
 }
-
+}
 .day{
     margin-left: 19px;
 }
